--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+
 /* CSS Document */
 
 body,td,th,p{
@@ -116,17 +117,19 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+  display: inline-block;
 }
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
+  border: none;
   font-family: Arial,sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
+  margin: 8px 2px;
   padding: 0 10px;
   width: 200px;
+  display: inline-block;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -134,18 +137,23 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 1em 0;
   text-align: center;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
+  box-shadow: 0px 2px 4px 1px #ddd;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
