--- a/css/styles.css
+++ b/css/styles.css
@@ -45,14 +45,13 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
 }
@@ -60,6 +59,8 @@ nav h1 {
   margin: auto;
 }
 nav h1 a {
+  display: inline-block;
+  padding: 20px 10px;
   color: #fff;
   font-size: 14pt;
   font-weight: 200;
@@ -149,18 +150,21 @@ nav h1 a {
   background-color: #fff;
   font-family: Arial,sans-serif;
   margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
+  /* min-height: 380px; */
+  padding: 10px;
+  padding-bottom: 50px;
   text-align: left;
   width: 270px;
   box-shadow: 0px 2px 4px 1px #ddd;
+  position: relative;
+
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
+  /* min-height: 248px; */
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -179,15 +183,17 @@ nav h1 a {
 }
 #restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -199,7 +205,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 92%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -226,7 +232,7 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 #restaurant-address {
   font-size: 12pt;
@@ -242,16 +248,16 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 140px 1% 30px 1%;
+  width: 48%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 30px 1% 80px 1%;
 }
 #reviews-container h2 {
   color: #f58500;
@@ -266,15 +272,50 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 96%;
+  margin: 0 0 2% 0;
+  padding: 2%;
 }
+
+#reviews-list li header {
+  position: static;
+  float: left;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+#reviews-list li .name {
+  font-size: 1.6em;
+  float: left;
+  width: 60%;
+  line-height: 2em;
+  margin: 0;
+}
+
+#reviews-list li .date {
+  font-size: 1em;
+  float: right;
+  width: 40%;
+  text-align: right;
+  line-height: 3.2em;
+  margin: 0;
+}
+
+#reviews-list li .rating {
+  clear: both;
+  display: inline-block;
+  padding: 2px 5px;
+  background-color: orange;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+
+}
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
