--- a/css/responsive.css
+++ b/css/responsive.css
@@ -27,7 +27,12 @@
 	}
 
 	.inside #map-container {
-		position: static;
+		position: relative;
+		top: 113px;
+		left: 0;
+		width: 100%;
+		height: 350px;
+		padding: 0;
 	}
 
 	.inside #footer {
