--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 16px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -15,7 +15,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 14px;
 	color: #333;
 }
 a {
@@ -43,7 +43,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 14px;
   letter-spacing: 1px;
   padding: 25px 0;
   text-align: center;
@@ -62,38 +62,35 @@ nav h1 a {
   display: inline-block;
   padding: 20px 10px;
   color: #fff;
-  font-size: 14pt;
+  font-size: 16px;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 12px 40px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
 }
-
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 16px;
 }
-
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
     padding: 8px;
     color: black;
     content: "/\00a0";
 }
-
 /* Add a color to all links inside the list */
 #breadcrumb li a {
     color: #0275d8;
     text-decoration: none;
 }
-
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
     color: #01447e;
@@ -112,7 +109,6 @@ nav h1 a {
   background-color: #3397DB;
   align-items: center;
 }
-
 .filter-options h2 {
   color: white;
   font-size: 1rem;
@@ -122,7 +118,6 @@ nav h1 a {
   display: inline-block;
   line-height: 3em;
 }
-
 .filter-options .filter-options-handler {
   display: inline-block;
   padding: 0.5em 1em;
@@ -133,12 +128,11 @@ nav h1 a {
   cursor: pointer;
   display: none;
 }
-
 .filter-options select {
   background-color: white;
   border: none;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-size: 14px;
   height: 35px;
   letter-spacing: 0;
   margin: 8px 2px;
@@ -146,7 +140,6 @@ nav h1 a {
   width: 200px;
   display: inline-block;
 }
-
 .filter-options select.show {
   display: inline-block;
 }
@@ -158,12 +151,10 @@ nav h1 a {
   margin: 0;
   padding: 1em 0;
   text-align: center;
-
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
 #restaurants-list li {
   background-color: #fff;
   font-family: Arial,sans-serif;
@@ -175,7 +166,6 @@ nav h1 a {
   width: 270px;
   box-shadow: 0px 2px 4px 1px #ddd;
   position: relative;
-
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -188,7 +178,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 16px;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -203,7 +193,7 @@ nav h1 a {
   background-color: orange;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 14px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -239,13 +229,27 @@ nav h1 a {
   position: absolute;
   width: 50%;
 }
+table {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+}
+table td {
+  color: #666;
+  border: 1px solid #ccc;
+  padding: 0.5em 1em;
+}
+table tr:nth-child(2n+1) {
+  background-color: white;
+  font-size: 
+}
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 22px;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 0;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -253,13 +257,13 @@ nav h1 a {
 	width: 100%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 18px;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 18px;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -274,15 +278,15 @@ nav h1 a {
   padding: 140px 1% 30px 1%;
   width: 48%;
 }
-#reviews-container {
-  padding: 30px 1% 80px 1%;
-}
-#reviews-container h2 {
+#restaurant-container h2, #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 26px;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
+  padding-bottom: 2px;
+}
+#reviews-container {
+  padding: 30px 1% 80px 1%;
 }
 #reviews-list {
   margin: 0;
@@ -298,14 +302,12 @@ nav h1 a {
   margin: 0 0 2% 0;
   padding: 2%;
 }
-
 #reviews-list li header {
   position: static;
   float: left;
   margin-bottom: 10px;
   border-bottom: 1px solid #ccc;
 }
-
 #reviews-list li .name {
   font-size: 1.6em;
   float: left;
@@ -313,7 +315,6 @@ nav h1 a {
   line-height: 2em;
   margin: 0;
 }
-
 #reviews-list li .date {
   font-size: 1em;
   float: right;
@@ -322,7 +323,6 @@ nav h1 a {
   line-height: 3.2em;
   margin: 0;
 }
-
 #reviews-list li .rating {
   clear: both;
   display: inline-block;
@@ -330,10 +330,9 @@ nav h1 a {
   background-color: orange;
   color: #fff;
   text-transform: uppercase;
+  font-size: 1em;
   font-weight: bold;
-
 }
-
 #reviews-list li p {
   margin: 0 0 10px;
 }
