--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,9 @@ table tr:nth-child(2n+1) {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 100%;
+  display: block;
+	max-width: 100%;
+  margin: 0 auto;
 }
 #restaurant-address {
   font-size: 18px;
